# flash-attention

./: .bazelrc  AGENTS.md  BUILD.bazel  CMakeLists.txt  Dockerfile  MODULE.bazel  NOTES.md  NOTESOLD.md  bootstrap.sh  build.sh  continue.md  cuda_archs_loose_intersection.bzl  cuda_archs_loose_intersection_test.bzl  cuda_library.bzl
.github/workflows/: _build.yaml  _so_build.yml  build.yml  ci.yaml  ci.yml  pre-commit.yaml  publish.yml  release.yaml  release.yml
capi/: capi.cu  capi.h  capi_sm90.cc  capi_sm90.cu  fa_utils.h
csrc/ATen/cuda/: CUDAGeneratorImpl.h
csrc/ATen/cuda/detail/: UnpackRaw.cuh
csrc/c10/cuda/: CUDAException.h
csrc/flash_attn/: flash_api.cpp
csrc/flash_attn/src/: generate_kernels.py  utils.h
flash_attn/cute/: flash_fwd_sm100.py  interface.py
flash_attn/flash_attn_triton_amd/: fwd_decode.py  utils.py
hopper/: block.h  clang_gmma_boundary_repro.cu  epilogue_fwd.hpp  flash.h  flash_api.cpp  flash_fwd_combine_kernel.h  flash_fwd_kernel_sm90.h  flash_fwd_launch_template.h  flash_prepare_scheduler.cu  heuristics.h  setup.py  static_switch.h  test_flash_attn.py  tile_scheduler.hpp  tile_size.h
scripts/: release_flashattn_so.sh
tests/: fa3_sm90_repro.cc
tools/: clang22-wrapper  clang22xx-wrapper  clang_gmma_boundary_repro.cu
