load("@rules_cuda//cuda:defs.bzl", "cuda_library")
load("//:cuda_archs_loose_intersection_test.bzl", "cuda_test_suite")
load("//:cuda_archs_loose_intersection.bzl", "cuda_archs_loose_intersection")

cuda_test_suite(
    name = "cuda_tests",
)

cuda_library(
    name = "cute",
    hdrs = glob(["csrc/cutlass/include/cute/**/*"]),
    includes = ["csrc/cutlass/include"],
)

cuda_library(
    name = "cutlass_utils",
    hdrs = glob(["csrc/cutlass/tools/util/include/**/*"]),
    includes = ["csrc/cutlass/tools/util/include"],
    deps = [":cute"],
)

cuda_library(
    name = "cutlass",
    hdrs = glob(["csrc/cutlass/include/cutlass/**/*"]),
    includes = ["csrc/cutlass/include"],
    deps = [
        ":cute",
        ":cutlass_utils",
    ],
)

cuda_library(
    name = "c10_stub",
    hdrs = ["csrc/c10/cuda/CUDAException.h"],
    includes = ["csrc"],
)

cuda_library(
    name = "ATen_stub",
    hdrs = [
        "csrc/ATen/cuda/CUDAGeneratorImpl.h",
        "csrc/ATen/cuda/detail/UnpackRaw.cuh",
    ],
    includes = ["csrc"],
)

cuda_library(
    name = "flashattn-headers",
    hdrs = glob(["csrc/flash_attn/src/*.h", "csrc/flash_attn/src/*.cuh"]),
    includes = ["csrc/flash_attn/src/"],
)

cuda_library(
    name = "flashattn",
    defines = [
        "ENABLE_FP8",
        "FLASHATTENTION_DISABLE_BACKWARD",
        "FLASHATTENTION_DISABLE_DROPOUT",
        "FLASHATTENTION_DISABLE_UNEVEN_K",
    ],
    deps = [
        "//:flashattn-headers",
        "//:cute",
        "//:cutlass",
        "//:c10_stub",
        "//:ATen_stub",
    ],
    copts = [
        "-U__CUDA_NO_HALF_OPERATORS__",
        "-U__CUDA_NO_HALF_CONVERSIONS__",
        "-U__CUDA_NO_HALF2_OPERATORS__",
        "-U__CUDA_NO_BFLOAT16_CONVERSIONS__",
        "--expt-relaxed-constexpr",
        "--expt-extended-lambda",
        "--use_fast_math",
        "--compress-mode=size",
    ],
    archs = cuda_archs_loose_intersection(["8.0+PTX"], ["8.0", "8.6", "8.9", "9.0", "10.0", "10.1", "11.0", "12.0"]),
    srcs = [
        "csrc/flash_attn/src/flash_fwd_hdim32_fp16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim32_bf16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim64_fp16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim64_bf16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim96_fp16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim96_bf16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim128_fp16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim128_bf16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim160_fp16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim160_bf16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim192_fp16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim192_bf16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim256_fp16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim256_bf16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim32_fp16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim32_bf16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim64_fp16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim64_bf16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim96_fp16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim96_bf16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim128_fp16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim128_bf16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim160_fp16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim160_bf16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim192_fp16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim192_bf16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim256_fp16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_hdim256_bf16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim32_fp16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim32_bf16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim64_fp16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim64_bf16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim96_fp16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim96_bf16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim128_fp16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim128_bf16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim160_fp16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim160_bf16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim192_fp16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim192_bf16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim256_fp16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim256_bf16_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim32_fp16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim32_bf16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim64_fp16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim64_bf16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim96_fp16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim96_bf16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim128_fp16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim128_bf16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim160_fp16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim160_bf16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim192_fp16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim192_bf16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim256_fp16_causal_sm80.cu",
        "csrc/flash_attn/src/flash_fwd_split_hdim256_bf16_causal_sm80.cu",
    ],
)

cuda_library(
    name = "capi-hdrs",
    hdrs = ["capi/capi.h", "capi/fa_utils.h"],
    copts = [],
)

cuda_library(
    name = "capi",
    srcs = ["capi/capi.cu"],
    defines = [
        "ENABLE_FP8",
        "FLASHATTENTION_DISABLE_BACKWARD",
        "FLASHATTENTION_DISABLE_DROPOUT",
        "FLASHATTENTION_DISABLE_UNEVEN_K",
    ],
    copts = [
        "-U__CUDA_NO_HALF_OPERATORS__",
        "-U__CUDA_NO_HALF_CONVERSIONS__",
        "-U__CUDA_NO_HALF2_OPERATORS__",
        "-U__CUDA_NO_BFLOAT16_CONVERSIONS__",
        "--expt-relaxed-constexpr",
        "--expt-extended-lambda",
        "--use_fast_math",
        "--compress-mode=size",
        "--std=c++20",
    ],
    deps = [":flashattn", ":capi-hdrs"],
    alwayslink = True,
)

cuda_library(
    name = "flashattn-sm90-headers",
    hdrs = glob(["hopper/*.h", "hopper/*.hpp"]),
    includes = ["hopper/"],
)

cuda_library(
    name = "flashattn-sm90",
    deps = [
        ":capi-hdrs",
        "//:flashattn-sm90-headers",
        "//:cute",
        "//:cutlass",
        "//:c10_stub",
        "//:ATen_stub",
    ],
    defines = [
        "FLASHATTENTION_DISABLE_BACKWARD",
        "FLASHATTENTION_DISABLE_DROPOUT",
        "FLASHATTENTION_DISABLE_SOFTCAP",
        "FLASHATTENTION_DISABLE_UNEVEN_K",
        "FLASHATTENTION_VARLEN_ONLY",
        "FLASHATTENTION_DISABLE_SM8x",
        "FLASHATTENTION_DISABLE_APPENDKV",
        "FLASHATTENTION_DISABLE_CLUSTER",
        "CUTE_SM90_EXTENDED_MMA_SHAPES_ENABLED",
        "CUTLASS_ENABLE_GDC_FOR_SM90",
    ],
    copts = [
        "-U__CUDA_NO_HALF_OPERATORS__",
        "-U__CUDA_NO_HALF_CONVERSIONS__",
        "-U__CUDA_NO_HALF2_OPERATORS__",
        "-U__CUDA_NO_BFLOAT16_CONVERSIONS__",
        "--expt-relaxed-constexpr",
        "--expt-extended-lambda",
        "--use_fast_math",
        "--compress-mode=size",
    ],
    archs = cuda_archs_loose_intersection(["9.0a"], ["8.0", "8.6", "8.9", "9.0", "10.0", "10.1", "11.0", "12.0"]),
    srcs = [
        "hopper/flash_prepare_scheduler.cu",
        "hopper/flash_fwd_combine.cu",
    ] 
    + glob([
        "hopper/instantiations/flash_fwd_hdim64_bf16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim96_bf16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim128_bf16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim192_bf16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim256_bf16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim64_256_bf16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim64_512_bf16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim192_128_bf16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim64_fp16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim96_fp16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim128_fp16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim192_fp16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim256_fp16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim64_256_fp16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim64_512_fp16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim192_128_fp16*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim64_e4m3*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim96_e4m3*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim128_e4m3*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim192_e4m3*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim256_e4m3*_sm90.cu",
        "hopper/instantiations/flash_fwd_hdim192_128_e4m3*_sm90.cu",
    ]),
)

cuda_library(
    name = "capi-sm90",
    srcs = ["capi/capi_sm90.cu"],
    defines = [
        "FLASHATTENTION_DISABLE_BACKWARD",
        "FLASHATTENTION_DISABLE_DROPOUT",
        "FLASHATTENTION_DISABLE_SOFTCAP",
        "FLASHATTENTION_DISABLE_UNEVEN_K",
        "FLASHATTENTION_VARLEN_ONLY",
        "FLASHATTENTION_DISABLE_SM8x",
        "FLASHATTENTION_DISABLE_APPENDKV",
        "FLASHATTENTION_DISABLE_CLUSTER",
        "CUTE_SM90_EXTENDED_MMA_SHAPES_ENABLED",
        "CUTLASS_ENABLE_GDC_FOR_SM90",
    ],
    copts = [
        "-U__CUDA_NO_HALF_OPERATORS__",
        "-U__CUDA_NO_HALF_CONVERSIONS__",
        "-U__CUDA_NO_HALF2_OPERATORS__",
        "-U__CUDA_NO_BFLOAT16_CONVERSIONS__",
        "--expt-relaxed-constexpr",
        "--expt-extended-lambda",
        "--use_fast_math",
        "--compress-mode=size",
        "--std=c++20",
    ],
    deps = [":flashattn-sm90", ":capi-hdrs"],
    alwayslink = True,
)

cc_shared_library(
    name = "flashattn_so",
    shared_lib_name = "libflashattn.so",
    deps = [":capi", ":capi-sm90"],
)
