module(
    name = "flash-attention",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "tar.bzl", version = "0.9.0")
bazel_dep(name = "llvm", version = "0.6.8")
git_override(
    module_name = "llvm",
    commit = "8d834a7e878a82e5a25776c222ce14704b3d2986",
    remote = "https://github.com/cerisier/toolchains_llvm_bootstrapped.git",
)
# local_path_override(
#     module_name = "llvm",
#     path = "../../cerisier/toolchains_llvm_bootstrapped",
# )


http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "cccl",
    url = "https://github.com/NVIDIA/cccl/archive/b1951b22423d35b6fd4578e4df8ca8647fe3a465.tar.gz",
    strip_prefix = "cccl-b1951b22423d35b6fd4578e4df8ca8647fe3a465",
    build_file = "@cuda_toolkit//cuda/build_defs:cuda_cccl_github.BUILD.bazel",
)

register_toolchains(
    "@llvm//toolchain:all",
)

bazel_dep(name = "cuda_toolkit", version = "0.0.2")
git_override(
    module_name = "cuda_toolkit",
    commit = "0c9592678f74c7c435dd2ec56d7c02ec199a63e0",
    remote = "https://github.com/hermeticbuild/cuda-toolkit.git",
)
# local_path_override(
#     module_name = "cuda_toolkit",
#     path = "../../hermeticbuild/cuda-toolkit",
# )
cuda_ext = use_extension("@cuda_toolkit//extensions:cuda.bzl", "cuda")

register_toolchains(
    "@cuda//cuda:all",
)

# cuda_ext.redist(
#     name = "cuda_13_0_2",
#     version = "13.0.2",
# )
cuda_ext.redist(
    name = "cuda_13_1_1",
    version = "13.1.1",
)
# cuda_ext.redist(
#     name = "cuda_12_8_1",
#     version = "12.8.1",
# )
# cuda_ext.redist(
#      name = "cuda_13_2_0",
#      version = "13.2.0",
# )
use_repo(cuda_ext, "cuda")
