module(
    name = "flash-attention",
)

bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "rules_cuda", version = "0.3.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "tar.bzl", version = "0.9.0")
bazel_dep(name = "llvm", version = "0.6.8")
git_override(
    module_name = "llvm",
    commit = "8d834a7e878a82e5a25776c222ce14704b3d2986",
    remote = "https://github.com/cerisier/toolchains_llvm_bootstrapped.git",
)
# local_path_override(
#     module_name = "llvm",
#     path = "../../cerisier/toolchains_llvm_bootstrapped",
# )


http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "cccl",
    url = "https://github.com/NVIDIA/cccl/archive/b1951b22423d35b6fd4578e4df8ca8647fe3a465.tar.gz",
    strip_prefix = "cccl-b1951b22423d35b6fd4578e4df8ca8647fe3a465",
    build_file = "@cuda_toolkit//cuda/build_defs:cuda_cccl_github.BUILD.bazel",
    integrity = "sha256-67GlI1MmJjCRgGXnPho+EfCP4xuZDCk7SR38nLkrB6g=",
)

register_toolchains(
    "@llvm//toolchain:all",
)

bazel_dep(name = "cuda_toolkit", version = "0.0.2")
git_override(
    module_name = "cuda_toolkit",
    commit = "0c9592678f74c7c435dd2ec56d7c02ec199a63e0",
    remote = "https://github.com/hermeticbuild/cuda-toolkit.git",
)
# local_path_override(
#     module_name = "cuda_toolkit",
#     path = "../../hermeticbuild/cuda-toolkit",
# )
# Retain the module only for the CCCL build file reference above; the active CUDA
# toolchain/repo for this experiment comes from rules_cuda below.
# cuda_ext = use_extension("@cuda_toolkit//extensions:cuda.bzl", "cuda")

# Hermetic NVCC-capable CUDA toolchain for A/B testing against the LLVM CUDA rules.
cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.redist_json(
    name = "cuda_13_0_2",
    version = "13.0.2",
)
cuda.toolkit(name = "cuda")
use_repo(cuda, "cuda")
